Change of data model: associate files with scenario instead of widgets and component configuration #34
